force-app/main/default/objects/CustomObjectTest__c/CustomObjectTest__c.object-meta.xml
<CustomObject>
    <label>CustomObjectTest</label>
    <nameField>
        <label>CustomObjectTest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomObjectTests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>