force-app/main/default/objects/CustomObjectTest__c/fields/CustomPicklist__c.field-meta.xml
<CustomField>
    <fullName>CustomPicklist__c</fullName>
    <label>CustomPicklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Custom1</fullName>
            </value>
            <value>
                <fullName>Custom2</fullName>
            </value>
            <value>
                <fullName>Custom3</fullName>
            </value>
            <value>
                <fullName>Custom4</fullName>
            </value>
            <value>
                <fullName>Custom5</fullName>
            </value>
            <value>
                <fullName>FlosumDemo</fullName>
                <isActive>false</isActive>
                <label>FlosumDemo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>