force-app/main/default/objects/CustomObjectTest__c/fields/Demo__c.field-meta.xml
<CustomField>
    <fullName>Demo__c</fullName>
    <label>Demo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1a</fullName>
            </value>
            <value>
                <fullName>2b</fullName>
            </value>
            <value>
                <fullName>3c</fullName>
            </value>
            <value>
                <fullName>4d</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>