force-app/main/default/objects/CustomObjectTest__c/fields/Flosum_checkbox__c.field-meta.xml
<CustomField>
    <fullName>Flosum_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flosum_checkbox</label>
    <type>Checkbox</type>
</CustomField>